--- a/ComputerPlug.html
+++ b/ComputerPlug.html
@@ -25,6 +25,6 @@
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Computer.play%20on%20the%20Web'>Computer.play on the Web</a></h2>
 
 <p>If you are not able to get git or the command line to work in your machine, you can access the module files directly from the Web:
-<p><a href="http://federicoreuben.com/computerdotplay/content/Help/Computer.html">GO TO COMPUTER.PLAY PLEASE!!!</a><div class='warning'><span class='warninglabel'>WARNING:</span> This method will be slower than if you have the files in your local computer as the files you will be using are on the Web. This should work though!</div><div class='note'><span class='notelabel'>NOTE:</span> Module materials here will be updated regularly.</div>
+<p><a href="https://freuben.github.io/computerhelp/Computer.html">GO TO COMPUTER.PLAY PLEASE!!!</a><div class='warning'><span class='warninglabel'>WARNING:</span> This method will be slower than if you have the files in your local computer as the files you will be using are on the Web. This should work though!</div><div class='note'><span class='notelabel'>NOTE:</span> Module materials here will be updated regularly.</div>
 <p>Thanks,
 <p>Federico<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlug/HelpSource/ComputerPlug.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlug/HelpSource/ComputerPlug.schelp</a><br>link::ComputerPlug::<br>sc version: 3.8.0</div></div></body></html>
