--- a/Computer.html
+++ b/Computer.html
@@ -22,7 +22,7 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Module'>Module</a></li>
-<ul class='toc'></ul><li class='toc1'><a href='#Update%20Material'>Update Material</a></li>
+<ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Concerts'>Concerts</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Talks'>Talks</a></li>
@@ -38,12 +38,9 @@
 <p><dt>Workshops<dd><ul>
 <li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens 1.html">Playing with UGens 1</a></ul>
 </dl>
-<h2><a class='anchor' name='Update%20Material'>Update Material</a></h2>
-<pre class='code prettyprint lang-sc'>//Evaluate the line below every time you want to update materials:
-Computer.update;
-//This will refresh the help files
-Computer.help;
-//Replace Student Name with your name, and evaluate if you attend the session when taking register
+<h2><a class='anchor' name='Register'>Register</a></h2>
+
+<p>This at the moment only works for Mac computers.<pre class='code prettyprint lang-sc'>//Replace Student Name with your name, and evaluate if you attend the session when taking register
 Computer.register("Student Name");</pre>
 <h2><a class='anchor' name='News'>News</a></h2>
 
