ready for day 2 web

--- a/Computer.html
+++ b/Computer.html
@@ -36,7 +36,10 @@
 <li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a></ul>
 
 <p><dt>Workshops<dd><ul>
-<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens 1.html">Playing with UGens 1</a></ul>
+<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./Workshops/Playing with UGens 2.html">Playing with UGens 2</a></ul>
+
+<p><dt>Study Guides<dd><ul>
+<li><a href="./Study Guides/Digital Audio.html">Digital Audio</a></ul>
 </dl>
 <h2><a class='anchor' name='Register'>Register</a></h2>
 
