--- a/Classes/BLowShelf.html
+++ b/Classes/BLowShelf.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,19 +19,18 @@
 <div id='summary'>Low Shelf</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BEQSuite.sc'>BEQSuite.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/BEQSuite.html">BEQSuite</a> : <a href="../Classes/Filter.html">Filter</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BEQSuite.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/BEQSuite.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/BEQSuite.html">BEQSuite</a> : <a href="../Classes/Filter.html">Filter</a> : <a href="../Classes/PureUGen.html">PureUGen</a> : <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/SOS.html">SOS</a>, <a href="./../Classes/BLowPass.html">BLowPass</a>, <a href="./../Classes/BLowPass4.html">BLowPass4</a>, <a href="./../Classes/BHiPass.html">BHiPass</a>, <a href="./../Classes/BHiPass4.html">BHiPass4</a>, <a href="./../Classes/BPeakEQ.html">BPeakEQ</a>, <a href="./../Classes/BHiShelf.html">BHiShelf</a>, <a href="./../Classes/BBandPass.html">BBandPass</a>, <a href="./../Classes/BBandStop.html">BBandStop</a>, <a href="./../Classes/BAllPass.html">BAllPass</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#*coeffs'>coeffs</a> </li>
-<li class='toc3'><a href='#*sc'>sc</a> </li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc3'><a href='#*sc'>sc</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
@@ -42,15 +40,13 @@
 <table class='arguments'>
 <tr><td class='argumentname'>in<td class='argumentdesc'>
 <p>input signal to be processed.<tr><td class='argumentname'>freq<td class='argumentdesc'>
-<p>center frequency.<tr><td class='argumentname'>rs<td class='argumentdesc'>
+<p>center frequency. WARNING: due to the nature of its implementation frequency values close to 0 may cause glitches and/or extremely loud audio artifacts!<tr><td class='argumentname'>rs<td class='argumentdesc'>
 <p>the reciprocal of S. Shell boost/cut slope. When S = 1, the shelf slope is as steep as it can be and remain monotonically increasing or decreasing gain with frequency. The shelf slope, in dB/octave, remains proportional to S for all other values for a fixed <code class='code prettyprint lang-sc'>freq/SampleRate.ir</code> and <code class='code prettyprint lang-sc'>db</code>.<tr><td class='argumentname'>db<td class='argumentdesc'>
-<p>gain. boost/cut the center frequency in dBs.<tr><td class='argumentname'>mul<td class='argumentdesc'><tr><td class='argumentname'>add<td class='argumentdesc'></table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*coeffs' href='./../Overviews/Methods.html#coeffs'>coeffs</a> (<span class='argstr'>sr: 44100</span>, <span class='argstr'>freq: 120</span>, <span class='argstr'>rs: 1</span>, <span class='argstr'>db: 0</span>)</h3>
-<div class='extmethod'>From extension in <a href='/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/quarks/wslib/wslib-classes/Main Features/EQ/extBEQSuite-coeffs.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/quarks/wslib/wslib-classes/Main Features/EQ/extBEQSuite-coeffs.sc</a></div>
+<p>gain. boost/cut the center frequency in dBs.<tr><td class='argumentname'>mul<td class='argumentdesc'><tr><td class='argumentname'>add<td class='argumentdesc'></table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*sc' href='./../Overviews/Methods.html#sc'>sc</a> (<span class='argstr'>dummy</span>, <span class='argstr'>freq: 120</span>, <span class='argstr'>rs: 1</span>, <span class='argstr'>db: 0</span>)</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>s.boot;
 (
@@ -75,4 +71,4 @@ BLowShelf.ar(
 }.play)
 z.release;</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/BLowShelf.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/BLowShelf.schelp</a><br>link::Classes/BLowShelf::<br>sc version: 3.5.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/BLowShelf.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/BLowShelf.schelp</a><br>link::Classes/BLowShelf::<br>sc version: 3.8.0</div></div></body></html>
