--- a/Classes/Computer.html
+++ b/Classes/Computer.html
@@ -19,42 +19,32 @@
 <div id='summary'>(Undocumented class)</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Computer[dot]play/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Computer[dot]play/Computer.sc'>Computer.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/ComputerWeb.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/ComputerWeb.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#*initClass'>initClass</a> </li>
-<li class='toc3'><a href='#*new'>new</a> </li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc3'><a href='#*play'>play</a> </li>
+<li class='toc3'><a href='#*register'>register</a> </li>
+<li class='toc3'><a href='#*shush'>shush</a> </li>
+<li class='toc3'><a href='#*url'>url</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#-arg1'>arg1</a> </li>
-<li class='toc3'><a href='#-arg2'>arg2</a> </li>
-<li class='toc3'><a href='#-arg3'>arg3</a> </li>
-<li class='toc3'><a href='#-initBasicClass'>initBasicClass</a> </li>
-<li class='toc3'><a href='#-message1'>message1</a> </li>
-<li class='toc3'><a href='#-message2'>message2</a> </li>
-</ul></ul><li class='toc1'><a href='#Help template'>Help template</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+</ul><li class='toc1'><a href='#Help%20template'>Help template</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>This class is missing documentation.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*initClass' href='./../Overviews/Methods.html#initClass'>initClass</a> </h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>arg1: "Music"</span>, <span class='argstr'>arg2: "Creativity"</span>, <span class='argstr'>arg3: "Code"</span>)</h3>
+<h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*play' href='./../Overviews/Methods.html#play'>play</a> </h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*register' href='./../Overviews/Methods.html#register'>register</a> (<span class='argstr'>name</span>, <span class='argstr'>ip</span>, <span class='argstr'>port</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*shush' href='./../Overviews/Methods.html#shush'>shush</a> </h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*url' href='./../Overviews/Methods.html#url'>url</a> (<span class='argstr'>url</span>)</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-arg1' href='./../Overviews/Methods.html#arg1'>arg1</a> </h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-arg2' href='./../Overviews/Methods.html#arg2'>arg2</a> </h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-arg3' href='./../Overviews/Methods.html#arg3'>arg3</a> </h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-initBasicClass' href='./../Overviews/Methods.html#initBasicClass'>initBasicClass</a> (<span class='argstr'>argument1</span>, <span class='argstr'>argument2</span>, <span class='argstr'>argument3</span>)</h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-message1' href='./../Overviews/Methods.html#message1'>message1</a> </h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-message2' href='./../Overviews/Methods.html#message2'>message2</a> </h3>
-<h2><a class='anchor' name='Help template'>Help template</a></h2>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h2><a class='anchor' name='Help%20template'>Help template</a></h2>
 
 <p>Copy and paste the text below and save to HelpSource/Classes/Computer.schelp<pre class='code prettyprint lang-sc'>TITLE:: Computer
 summary:: (put short description here)
@@ -67,66 +57,40 @@ DESCRIPTION::
 
 CLASSMETHODS::
 
-METHOD:: new
+METHOD:: register
 (describe method here)
 
-ARGUMENT:: arg1
+ARGUMENT:: name
 (describe argument here)
 
-ARGUMENT:: arg2
+ARGUMENT:: ip
 (describe argument here)
 
-ARGUMENT:: arg3
+ARGUMENT:: port
 (describe argument here)
 
 returns:: (describe returnvalue here)
 
-METHOD:: initClass
+METHOD:: shush
+(describe method here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: url
+(describe method here)
+
+ARGUMENT:: url
+(describe argument here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: play
 (describe method here)
 
 returns:: (describe returnvalue here)
 
 
 INSTANCEMETHODS::
-
-METHOD:: message2
-(describe method here)
-
-returns:: (describe returnvalue here)
-
-METHOD:: arg2
-(describe method here)
-
-returns:: (describe returnvalue here)
-
-METHOD:: arg1
-(describe method here)
-
-returns:: (describe returnvalue here)
-
-METHOD:: arg3
-(describe method here)
-
-returns:: (describe returnvalue here)
-
-METHOD:: initBasicClass
-(describe method here)
-
-ARGUMENT:: argument1
-(describe argument here)
-
-ARGUMENT:: argument2
-(describe argument here)
-
-ARGUMENT:: argument3
-(describe argument here)
-
-returns:: (describe returnvalue here)
-
-METHOD:: message1
-(describe method here)
-
-returns:: (describe returnvalue here)
 
 
 EXAMPLES::
@@ -135,4 +99,4 @@ code::
 (some example code)
 ::
 </pre>
-<div class='doclink'>link::Classes/Computer::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>link::Classes/Computer::<br>sc version: 3.8.0</div></div></body></html>
