--- a/Classes/SmoothDecimator.html
+++ b/Classes/SmoothDecimator.html
@@ -1,4 +1,4 @@
-<html><head><title>Decimator</title>
+<html><head><title>SmoothDecimator</title>
 <link rel='stylesheet' href='./../scdoc.css' type='text/css' />
 <link rel='stylesheet' href='./../frontend.css' type='text/css' />
 <link rel='stylesheet' href='./../custom.css' type='text/css' />
@@ -15,12 +15,12 @@
 <div class='header'>
 <div id='label'>SuperCollider CLASSES (extension)</div>
 <div id='categories'><a href='./../Browse.html#UGens>Filters'>UGens>Filters</a></div>
-<h1>Decimator</h1>
+<h1>SmoothDecimator</h1>
 <div id='summary'>port of some ladspa plugins</div>
 </div>
 <div class='subheader'>
 <div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/DistortionUGens/DistortionPlugins.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/DistortionUGens/DistortionPlugins.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
-<div id='related'>See also: <a href="./../Classes/CrossoverDistortion.html">CrossoverDistortion</a>, <a href="./../Classes/SmoothDecimator.html">SmoothDecimator</a>, <a href="./../Classes/SineShaper.html">SineShaper</a>, <a href="./../Classes/Disintegrator.html">Disintegrator</a></div>
+<div id='related'>See also: <a href="./../Classes/CrossoverDistortion.html">CrossoverDistortion</a>, <a href="./../Classes/Decimator.html">Decimator</a>, <a href="./../Classes/SineShaper.html">SineShaper</a>, <a href="./../Classes/Disintegrator.html">Disintegrator</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
@@ -32,22 +32,22 @@
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
-<p>Decimates (reduces the effective sample rate), and reduces the bit depth of the input signal, allows non integer values for smooth transitions between clean and lofi signals.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>in</span>, <span class='argstr'>rate: 44100</span>, <span class='argstr'>bits: 24</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
+<p>Decimates (reduces the effective sample rate).<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ar' href='./../Overviews/Methods.html#ar'>ar</a> (<span class='argstr'>in</span>, <span class='argstr'>rate: 44100</span>, <span class='argstr'>smoothing: 0.5</span>, <span class='argstr'>mul: 1</span>, <span class='argstr'>add: 0</span>)</h3>
 <div class='method'>
 <p><h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>in<td class='argumentdesc'>
 <p>The input signal.<tr><td class='argumentname'>rate<td class='argumentdesc'>
-<p>The sample rate that the signal will be resampled at.<tr><td class='argumentname'>bits<td class='argumentdesc'>
-<p>The bit depth that the signal will be reduced to.<tr><td class='argumentname'>mul<td class='argumentdesc'>
+<p>The rate at which the output signal will be resampled.<tr><td class='argumentname'>smoothing<td class='argumentdesc'>
+<p>The amount of smoothing on the output signal.<tr><td class='argumentname'>mul<td class='argumentdesc'>
 <p>Output will be multiplied by this value.<tr><td class='argumentname'>add<td class='argumentdesc'>
 <p>This value will be added to the output.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
-<pre class='code prettyprint lang-sc'>{Decimator.ar(SinOsc.ar([400, 404], 0, 0.2), MouseX.kr(0, 44100), MouseY.kr(0, 31))}.play
+<pre class='code prettyprint lang-sc'>{SmoothDecimator.ar(SinOsc.ar([400, 404], 0, 0.2), MouseX.kr(0, 44100), MouseY.kr(0, 1))}.play
 
-{Decimator.ar(SoundIn.ar, MouseX.kr(0, 44100), MouseY.kr(0, 31))}.play</pre>
+{SmoothDecimator.ar(SoundIn.ar, MouseX.kr(0, 44100), MouseY.kr(0, 1))}.play</pre>
 
-<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/DistortionUGens/HelpSource/Classes/Decimator.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/DistortionUGens/HelpSource/Classes/Decimator.schelp</a><br>link::Classes/Decimator::<br>sc version: 3.8.0</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/DistortionUGens/HelpSource/Classes/SmoothDecimator.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/DistortionUGens/HelpSource/Classes/SmoothDecimator.schelp</a><br>link::Classes/SmoothDecimator::<br>sc version: 3.8.0</div></div></body></html>
