--- a/Classes/Stethoscope.html
+++ b/Classes/Stethoscope.html
@@ -19,20 +19,20 @@
 <div id='summary'>An oscilloscope</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/Stethoscope.sc'>Stethoscope.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/Stethoscope.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/tools/Stethoscope.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 <div id='subclasses'>Subclasses: <a href="../Classes/QStethoscope.html">QStethoscope</a></div>
 <div id='related'>See also: <a href="./../Classes/ScopeView.html">ScopeView</a>, <a href="./../Classes/FreqScope.html">FreqScope</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
-<ul class='toc'><li class='toc2'><a href='#Creation by message .scope'>Creation by message .scope</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Keyboard shortcuts'>Keyboard shortcuts</a></li>
+<ul class='toc'><li class='toc2'><a href='#Creation%20by%20message%20.scope'>Creation by message .scope</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Keyboard%20shortcuts'>Keyboard shortcuts</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 <li class='toc3'><a href='#*isValidServer'>isValidServer</a> </li>
 <li class='toc3'><a href='#*ugenScopes'>ugenScopes</a> </li>
 <li class='toc3'><a href='#*tileBounds'>tileBounds</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc2'><a href='#Data'>Data</a></li>
 <ul class='toc'><li class='toc3'><a href='#-server'>server</a> </li>
@@ -54,8 +54,8 @@
 <li class='toc3'><a href='#-quit'>quit</a> </li>
 </ul><li class='toc2'><a href='#Convenience'>Convenience</a></li>
 <ul class='toc'><li class='toc3'><a href='#-setProperties'>setProperties</a> </li>
-</ul><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+</ul><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-bus'>bus</a> </li>
 <li class='toc3'><a href='#-doOnServerQuit'>doOnServerQuit</a> </li>
 <li class='toc3'><a href='#-doOnServerTree'>doOnServerTree</a> </li>
@@ -70,13 +70,13 @@
 <li class='toc3'><a href='#-toOutputBus'>toOutputBus</a> </li>
 <li class='toc3'><a href='#-view'>view</a> </li>
 </ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
-<ul class='toc'><li class='toc2'><a href='#A step-by-step example'>A step-by-step example</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Embedded use'>Embedded use</a></li>
+<ul class='toc'><li class='toc2'><a href='#A%20step-by-step%20example'>A step-by-step example</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Embedded%20use'>Embedded use</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
-<p>Stethoscope provides a complete oscilloscope GUI. It displays a window containing a bus-plotting <a href="./../Classes/ScopeView.html">ScopeView</a> and an interface to configure the plotting and choose among the buses.<h3><a class='anchor' name='Creation by message .scope'>Creation by message .scope</a></h3>
+<p>Stethoscope provides a complete oscilloscope GUI. It displays a window containing a bus-plotting <a href="./../Classes/ScopeView.html">ScopeView</a> and an interface to configure the plotting and choose among the buses.<h3><a class='anchor' name='Creation%20by%20message%20.scope'>Creation by message .scope</a></h3>
 
-<p>Several classes provide a convenient 'scope' method that creates a Stethoscope to display their data. See for example: <a href="./../Classes/Server.html#-scope">Server: -scope</a>, <a href="./../Classes/Bus.html#-scope">Bus: -scope</a>, <a href="./../Classes/Function.html#-scope">Function: -scope</a>.<h3><a class='anchor' name='Keyboard shortcuts'>Keyboard shortcuts</a></h3>
+<p>Several classes provide a convenient 'scope' method that creates a Stethoscope to display their data. See for example: <a href="./../Classes/Server.html#-scope">Server: -scope</a>, <a href="./../Classes/Bus.html#-scope">Bus: -scope</a>, <a href="./../Classes/Function.html#-scope">Function: -scope</a>.<h3><a class='anchor' name='Keyboard%20shortcuts'>Keyboard shortcuts</a></h3>
 
 <p>The following keyboard shortcuts may be used when focused on the Stethoscope display:<table>
 <tr><td><strong>Shortcut</strong><td><strong>Action</strong><tr><td>J<td>one channel back<tr><td>K<td>switch rate (audio vs. control)<tr><td>L<td>one channel forward<tr><td>O<td>jump to first hardware output channel and adjust numChannels to hardware<tr><td>I<td>jump to first hardware input channel and adjust numChannels to hardware<tr><td>space<td>run, if not running already<tr><td>. (period)<td>stop<tr><td>M<td>toggle screen size<tr><td>+ / -<td>zoom horizontally<tr><td>* / _<td>zoom vertically<tr><td>S<td>change style between parallel and overlay<tr><td>Shift+S<td>change style to lissajou<tr><td>Shift+A<td>allocate buffer size so it fills the screen (to next power of two) (this can be dangerous, might crash)</table>
@@ -90,7 +90,7 @@
 <p> An integer. Default value is 2.<tr><td class='argumentname'>index<td class='argumentdesc'>
 <p> The offset index. An Integer. Default is nil.<tr><td class='argumentname'>bufsize<td class='argumentdesc'>
 <p> The size of the analysis buffer. Default is 4096. See also <a href="#-bufsize">-bufsize</a>.<tr><td class='argumentname'>zoom<td class='argumentdesc'>
-<p> Horizontal maginification of the displayed wave. Default is 1. See also <a href="#-xZoom">-xZoom</a>.<tr><td class='argumentname'>rate<td class='argumentdesc'>
+<p> Horizontal magnification of the displayed wave. Default is 1. See also <a href="#-xZoom">-xZoom</a>.<tr><td class='argumentname'>rate<td class='argumentdesc'>
 <p> \audio or \control. Default is \audio.<tr><td class='argumentname'>view<td class='argumentdesc'>
 <p> The optional parent view. Default is nil. If nil, then it will open in its own Window.<tr><td class='argumentname'>bufnum<td class='argumentdesc'>
 <p> The id number of the Buffer to analyze. Default value is nil. If nil, then a Buffer of size bufSize is allocated.
@@ -113,7 +113,7 @@ Stethoscope.ugenScopes; // returns the ugen scopes</pre>
 <div class='method'>
 <p> A utility method used by <a href="./../Classes/UGen.html#-scope">UGen: -scope</a> to tile scope windows.<h4>Returns:</h4>
 <div class='returnvalue'>
-<p>A Rect.</div></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>A Rect.</div></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3><a class='anchor' name='Data'>Data</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-server' href='./../Overviews/Methods.html#server'>server</a> </h3>
@@ -142,7 +142,7 @@ Stethoscope.ugenScopes; // returns the ugen scopes</pre>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-cycle' href='./../Overviews/Methods.html#cycle'>cycle</a> = <span class='argstr'>val</span></h3>
 <div class='method'><div class='note'><span class='notelabel'>NOTE:</span> Only available in Qt GUI</div>
 <p> The exact scoping period, in signal frames. Reciprocal to what is also known as <em>sweep speed</em> in analog oscilloscopes. It is dynamically adjustable while the scope is running.
-<p> Data from scoped signals will be accumulated into a buffer until it reaches <code class='code prettyprint lang-sc'>cycle</code> amount frames, at which point the buffering will immediatly restart. The view will repeatedly display the entire buffer; it may skip a cycle if the drawing is too slow to keep up with the speed of incoming data, but the cycle boundaries will never shift with respect to signals.
+<p> Data from scoped signals will be accumulated into a buffer until it reaches <code class='code prettyprint lang-sc'>cycle</code> amount frames, at which point the buffering will immediately restart. The view will repeatedly display the entire buffer; it may skip a cycle if the drawing is too slow to keep up with the speed of incoming data, but the cycle boundaries will never shift with respect to signals.
 <p> If you are scoping a periodic signal, setting <code class='code prettyprint lang-sc'>cycle</code> to match the signal's period will keep the waveform locked in place.</div><h3><a class='anchor' name='Display'>Display</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-window' href='./../Overviews/Methods.html#window'>window</a> </h3>
 <div class='method'>
@@ -171,10 +171,10 @@ Stethoscope.ugenScopes; // returns the ugen scopes</pre>
 <p> Magnifies the displayed wave vertically to the given factor.<h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>val<td class='argumentdesc'>
-<p> A Float.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-style' href='./../Overviews/Methods.html#style'>style</a><h3 class='imethodname'><span class='methprefix'>-</span><a name='-style' href='./../Overviews/Methods.html#style'>style</a> = <span class='argstr'>val</span></h3>
+<p> A Float.</table></div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-style' href='./../Overviews/Methods.html#style'>style</a> = <span class='argstr'>val</span></h3>
 <div class='method'>
 <p> The plotting style:<ul>
-<li>0 = the channels are vertically spaced<li>1 = the channels are overlayed<li>2 = lissajou; the first two channels are used for 2D plotting (as streams of x and y coordinates).</ul>
+<li>0 = the channels are vertically spaced<li>1 = the channels are overlaid<li>2 = lissajou; the first two channels are used for 2D plotting (as streams of x and y coordinates).</ul>
 <h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>val<td class='argumentdesc'>
@@ -186,8 +186,8 @@ Stethoscope.ugenScopes; // returns the ugen scopes</pre>
 <p> Closes the window, and cleans up any used synths and buffers.</div><h3><a class='anchor' name='Convenience'>Convenience</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-setProperties' href='./../Overviews/Methods.html#setProperties'>setProperties</a> (<span class='argstr'>numChannels</span>, <span class='argstr'>index</span>, <span class='argstr'>bufsize</span>, <span class='argstr'>zoom</span>, <span class='argstr'>rate</span>)</h3>
 <div class='method'>
-<p> Sets several properties at once: <a href="#-numChannels">-numChannels</a>, <a href="#-index">-index</a>, <a href="#-bufsize">-bufsize</a>, <a href="#-zoom">-zoom</a>, and <a href="#-rate">-rate</a>.</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p> Sets several properties at once: <a href="#-numChannels">-numChannels</a>, <a href="#-index">-index</a>, <a href="#-bufsize">-bufsize</a>, <a href="#-zoom">-zoom</a>, and <a href="#-rate">-rate</a>.</div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-bus' href='./../Overviews/Methods.html#bus'>bus</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-bus' href='./../Overviews/Methods.html#bus'>bus</a> = <span class='argstr'>b</span></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-doOnServerQuit' href='./../Overviews/Methods.html#doOnServerQuit'>doOnServerQuit</a> </h3>
@@ -205,7 +205,7 @@ Stethoscope.ugenScopes; // returns the ugen scopes</pre>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-toOutputBus' href='./../Overviews/Methods.html#toOutputBus'>toOutputBus</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-view' href='./../Overviews/Methods.html#view'>view</a> </h3>
 <h2><a class='anchor' name='examples'>Examples</a></h2>
-<h3><a class='anchor' name='A step-by-step example'>A step-by-step example</a></h3>
+<h3><a class='anchor' name='A%20step-by-step%20example'>A step-by-step example</a></h3>
 <pre class='code prettyprint lang-sc'>s.boot;
 (
 {
@@ -241,7 +241,7 @@ c.scope;
 
 // note that scoping control rate buses shows block size interpolation (this is due to the
 // fact that ScopeOut.kr doesn't work yet.)</pre>
-<h3><a class='anchor' name='Embedded use'>Embedded use</a></h3>
+<h3><a class='anchor' name='Embedded%20use'>Embedded use</a></h3>
 
 <p>You can pass your own view in to add a stethoscope to it:<pre class='code prettyprint lang-sc'>w = Window.new("my own scope", Rect(20, 20, 400, 500));
 w.view.decorator = FlowLayout(w.view.bounds);
@@ -249,4 +249,4 @@ c = Stethoscope.new(s, view:w.view);
 w.onClose = { c.free }; // don't forget this
 w.front;</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Stethoscope.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Stethoscope.schelp</a><br>link::Classes/Stethoscope::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Stethoscope.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Stethoscope.schelp</a><br>link::Classes/Stethoscope::<br>sc version: 3.8.0</div></div></body></html>
