added code exmaples

--- a/Computer.html
+++ b/Computer.html
@@ -40,6 +40,9 @@
 
 <p><dt>Study Guides<dd><ul>
 <li><a href="./Study Guides/Digital Audio.html">Digital Audio</a></ul>
+
+<p><dt>Code Examples<dd><ul>
+<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a></ul>
 </dl>
 <h2><a class='anchor' name='Register'>Register</a></h2>
 
