changes after session 2

--- a/Computer.html
+++ b/Computer.html
@@ -36,7 +36,7 @@
 <li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a></ul>
 
 <p><dt>Workshops<dd><ul>
-<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./Workshops/Playing with UGens 2.html">Playing with UGens 2</a></ul>
+<li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a></ul>
 
 <p><dt>Study Guides<dd><ul>
 <li><a href="./Study Guides/Digital Audio.html">Digital Audio</a></ul>
@@ -46,8 +46,7 @@
 </dl>
 <h2><a class='anchor' name='Register'>Register</a></h2>
 
-<p>This at the moment only works for Mac computers.<pre class='code prettyprint lang-sc'>//Replace Student Name with your name, and evaluate if you attend the session when taking register
-Computer.register("Student Name");</pre>
+<p>Replace "Student Name" with your name, and evaluate if you attend the session when taking register<pre class='code prettyprint lang-sc'>Computer.register("Student Name");</pre>
 <h2><a class='anchor' name='News'>News</a></h2>
 
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Concerts'>Concerts</a></h3>
