--- a/Classes/EnvGen.html
+++ b/Classes/EnvGen.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,24 +19,24 @@
 <div id='summary'>Envelope generator</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/<a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/EnvGen.sc'>EnvGen.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/EnvGen.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/EnvGen.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/UGen.html">UGen</a> : <a href="../Classes/AbstractFunction.html">AbstractFunction</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Linen.html">Linen</a>, <a href="./../Classes/Env.html">Env</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*ar'>ar</a>  <a href='#*kr'>kr</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-canFreeSynth'>canFreeSynth</a> </li>
 </ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
-<ul class='toc'><li class='toc2'><a href='#Specifying an envelope for each new synth'>Specifying an envelope for each new synth</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Forced release'>Forced release</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Fast triggering tests'>Fast triggering tests</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Modulating the levelScale'>Modulating the levelScale</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#More examples'>More examples</a></li>
+<ul class='toc'><li class='toc2'><a href='#Specifying%20an%20envelope%20for%20each%20new%20synth'>Specifying an envelope for each new synth</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Forced%20release'>Forced release</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Fast%20triggering%20tests'>Fast triggering tests</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Modulating%20the%20levelScale'>Modulating the levelScale</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#More%20examples'>More examples</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>Plays back break point envelopes. The envelopes are instances of the <a href="./../Classes/Env.html">Env</a> class. The envelope and the arguments for <code class='code prettyprint lang-sc'>levelScale</code> , <code class='code prettyprint lang-sc'>levelBias</code> , and <code class='code prettyprint lang-sc'>timeScale</code>are polled when the EnvGen is triggered and remain constant for the duration of the envelope.<pre class='code prettyprint lang-sc'>{ PinkNoise.ar(EnvGen.kr(Env.perc, doneAction: 2)) }.play</pre>
@@ -51,7 +50,7 @@
 <p>An <a href="./../Classes/Env.html">Env</a> instance, or an Array of Controls. (See <a href="./../Classes/Control.html">Control</a> and the example below for how to use this.)
 <p>The envelope is polled when the EnvGen is triggered. The Env inputs can be other UGens.<tr><td class='argumentname'>gate<td class='argumentdesc'>
 <p>This triggers the envelope and holds it open while &gt; 0. If the Env is fixed-length (e.g. Env.linen, Env.perc), the gate argument is used as a simple trigger. If it is an sustaining envelope (e.g. Env.adsr, Env.asr), the envelope is held open until the gate becomes 0, at which point is released.
-<p>If <strong>gate</strong> &lt; 0, force release with time <code class='code prettyprint lang-sc'>-1.0 - gate</code>, see <a href="#forced_release">forced_release</a> below.<tr><td class='argumentname'>levelScale<td class='argumentdesc'>
+<p>If <strong>gate</strong> &lt; 0, force release with time <code class='code prettyprint lang-sc'>-1.0 - gate</code>. See <a href="#Forced%20release">Forced%20release</a> below.<tr><td class='argumentname'>levelScale<td class='argumentdesc'>
 <p>Scales the levels of the breakpoints.<tr><td class='argumentname'>levelBias<td class='argumentdesc'>
 <p>Offsets the levels of the breakpoints.<tr><td class='argumentname'>timeScale<td class='argumentdesc'>
 <p>Scales the durations of the segments.<tr><td class='argumentname'>doneAction<td class='argumentdesc'>
@@ -84,12 +83,12 @@
     ).sum * 0.2
 }.play;
 )</pre>
-</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-canFreeSynth' href='./../Overviews/Methods.html#canFreeSynth'>canFreeSynth</a> </h3>
-<div class='extmethod'>From extension in <a href='/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/canFreeSynth.sc'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/canFreeSynth.sc</a></div>
+<div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/canFreeSynth.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Audio/canFreeSynth.sc</a></div>
 <h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>// retriggered envelope by Dust
 (
@@ -133,17 +132,6 @@ fork {
 )
 
 
-// turn on
-a.set(\gate, 1);
-
-// turn off
-a.set(\gate, 0);
-
-// it does not matter to what value the gate is set, as long as it is &gt; 0
-a.set(\gate, 2);
-
-a.free;
-
 // using a gated envelope to gate a sound:
 (
 SynthDef(\env_help, { | out, gate = 0, freq = 440, doneAction = 0 |
@@ -167,7 +155,7 @@ a.set(\gate, 2);
 a.set(\doneAction, 2, \gate, 0); // set doneAction to two to let the synth free itself
 
 a.free; // alternatively, free it directly.</pre>
-<h3><a class='anchor' name='Specifying an envelope for each new synth'>Specifying an envelope for each new synth</a></h3>
+<h3><a class='anchor' name='Specifying%20an%20envelope%20for%20each%20new%20synth'>Specifying an envelope for each new synth</a></h3>
 <pre class='code prettyprint lang-sc'>(
 SynthDef(\help_Env_newClear, { |out = 0|
     var env, envctl;
@@ -188,7 +176,7 @@ Synth(\help_Env_newClear, [\gate, 1, \env, Env({ rrand(60, 70).midicps } ! 4, [1
 
 // the same written as an event:
 (instrument: \help_Env_newClear, gate: 1, env: Env({ rrand(60, 70).midicps } ! 4, [1,1,1], \exp)).play;</pre>
-<h3><a class='anchor' name='Forced release'>Forced release</a></h3>
+<h3><a class='anchor' name='Forced%20release'>Forced release</a></h3>
 
 <p>If the gate of an EnvGen is set to -1 or below, then the envelope will cutoff immediately. The time for it to cutoff is the amount less than -1, with -1 being as fast as possible, -1.5 being a cutoff in 0.5 seconds, etc. The cutoff shape is linear.<pre class='code prettyprint lang-sc'>(
 SynthDef(\stealMe, { |out, gate = 1|
@@ -205,7 +193,7 @@ s.sendMsg(\n_set, 1001, \gate, -1.1); // cutoff in 0.1 seconds</pre>
 
 <p>If the synthDef has an arg named "gate", the convenience method of Node can be used: <code class='code prettyprint lang-sc'>node.release(releaseTime)</code><pre class='code prettyprint lang-sc'>d = { arg gate=1; {BrownNoise.ar}.dup * EnvGen.kr(Env.asr, gate, doneAction:2) }.play;
 d.release(3);</pre>
-<h3><a class='anchor' name='Fast triggering tests'>Fast triggering tests</a></h3>
+<h3><a class='anchor' name='Fast%20triggering%20tests'>Fast triggering tests</a></h3>
 <pre class='code prettyprint lang-sc'>(
 {
     EnvGen.kr(
@@ -224,7 +212,7 @@ d.release(3);</pre>
     ) * SinOsc.ar(440, 0, 0.3)
 }.play;
 )</pre>
-<h3><a class='anchor' name='Modulating the levelScale'>Modulating the levelScale</a></h3>
+<h3><a class='anchor' name='Modulating%20the%20levelScale'>Modulating the levelScale</a></h3>
 <pre class='code prettyprint lang-sc'>// no, it doesn't take a ugen in ...
 (
 {
@@ -248,7 +236,7 @@ d.release(3);</pre>
     ) * SinOsc.ar(440, 0, 0.3)
 }.play;
 )</pre>
-<h3><a class='anchor' name='More examples'>More examples</a></h3>
+<h3><a class='anchor' name='More%20examples'>More examples</a></h3>
 
 <p>For more information about the <em>control bus mapping</em> used in the line <code class='code prettyprint lang-sc'>a = Synth(\sine, [freq: f.asMap]);</code>, see <a href="./../Classes/Node.html#-map">Node: -map</a> and <a href="./../Classes/Bus.html#-asMap">Bus: -asMap</a>.<pre class='code prettyprint lang-sc'>// Changing an Env while playing
 (
@@ -285,4 +273,4 @@ Synth(\env, [i_outbus: f, env: Env([1000, 1000, 800, 1000, 900, 1000], [1, 1, 1,
 a.free;
 f.free;</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/EnvGen.schelp'>/Applications/SuperCollider 5.5/SuperCollider.app/Contents/Resources/HelpSource/Classes/EnvGen.schelp</a><br>link::Classes/EnvGen::<br>sc version: 3.5.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/EnvGen.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/EnvGen.schelp</a><br>link::Classes/EnvGen::<br>sc version: 3.8.0</div></div></body></html>
