--- a/Computer.html
+++ b/Computer.html
@@ -21,13 +21,20 @@
 <div class='subheader'>
 </div>
 <div id='toc'>
-<ul class='toc'><li class='toc1'><a href='#Module'>Module</a></li>
+<ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
+<ul class='toc'><li class='toc2'><a href='#Computer.play%20Tutorial%201'>Computer.play Tutorial 1</a></li>
+<ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
 <ul class='toc'><li class='toc2'><a href='#Concerts'>Concerts</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Talks'>Talks</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
-<ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
+<ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
+
+<p>Hi all, your first tutorial will take place on the 23rd and 30th of January (weeks 3 and 4):<h3><a class='anchor' name='Computer.play%20Tutorial%201'>Computer.play Tutorial 1</a></h3>
+<table>
+<tr><td><strong>MRC/002</strong><td><strong>MONDAY, 23 JANUARY</strong><td><strong>MRC/002</strong><td><strong>Monday, 30 January</strong><tr><td>09:15<td>ATHENE BROAD<td>09:15<td>WILLIAM BARNARDO<tr><td>09:35<td>THOMAS BROWN-BRIDGE<td>09:35<td>FELCITY MARGERESON<tr><td>09:55<td>MATILDA GANNON<td>09:55<td>ELIZABETH PHIPPARD<tr><td>10:15<td>SARAH PENDLETON<td>10:15<td>EMILY SULLIVIN<tr><td>10:35<td>ERIN ROBINSON<td>10:35<td>FREDERICK WORDSWORTH<tr><td>11:05<td>DOMINIC CRAMP<td>11:05<td>CATHERINE ROBSON<tr><td>11:25<td>CHRISTOPHER MURPHY<td>11:25<td>KATHARINE LOVELL<tr><td>11:45<td>TOBIAS RANDALL-PALEY<td>11:45<td>ALAN FOWLER<tr><td>12:05<td>JAN TAN<td>12:05<td>BARRINGTON BROOK<tr><td>12:25<td>BENJAMIN STRANGE<td>12:05<td>BARRINGTON BROOK<tr><td>12:45<td>TOM HORNER<td>12:45<td>GABRIEL WALKER<tr><td>15:00<td>POPPY RICE<td><td></table>
+<div class='note'><span class='notelabel'>NOTE:</span> Please let me know if you can't make it to your slot and we can try to reschedule</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
