--- a/Classes/Computer.html
+++ b/Classes/Computer.html
@@ -19,32 +19,51 @@
 <div id='summary'>(Undocumented class)</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/ComputerWeb.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/ComputerWeb.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/Computer.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/Computer.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 <li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
-<ul class='toc'><li class='toc3'><a href='#*play'>play</a> </li>
+<ul class='toc'><li class='toc3'><a href='#*clone'>clone</a> </li>
+<li class='toc3'><a href='#*fileRegister'>fileRegister</a> </li>
+<li class='toc3'><a href='#*initClass'>initClass</a> </li>
+<li class='toc3'><a href='#*new'>new</a> </li>
+<li class='toc3'><a href='#*play'>play</a> </li>
+<li class='toc3'><a href='#*readRegister'>readRegister</a> </li>
 <li class='toc3'><a href='#*register'>register</a> </li>
-<li class='toc3'><a href='#*shush'>shush</a> </li>
+<li class='toc3'><a href='#*update'>update</a> </li>
 <li class='toc3'><a href='#*url'>url</a> </li>
+<li class='toc3'><a href='#*writeRegister'>writeRegister</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
-</ul><li class='toc1'><a href='#Help%20template'>Help template</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
+<ul class='toc'><li class='toc3'><a href='#-init'>init</a> </li>
+<li class='toc3'><a href='#-init2'>init2</a> </li>
+</ul></ul><li class='toc1'><a href='#Help%20template'>Help template</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>This class is missing documentation.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*play' href='./../Overviews/Methods.html#play'>play</a> </h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*clone' href='./../Overviews/Methods.html#clone'>clone</a> (<span class='argstr'>path</span>, <span class='argstr'>url</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*fileRegister' href='./../Overviews/Methods.html#fileRegister'>fileRegister</a></h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*fileRegister' href='./../Overviews/Methods.html#fileRegister'>fileRegister</a> = value</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*initClass' href='./../Overviews/Methods.html#initClass'>initClass</a> </h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>arg1: "Music"</span>, <span class='argstr'>arg2: "Creativity"</span>, <span class='argstr'>arg3: "Code"</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*play' href='./../Overviews/Methods.html#play'>play</a> (<span class='argstr'>arg1: "Music"</span>, <span class='argstr'>arg2: "Creativity"</span>, <span class='argstr'>arg3: "Code"</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*readRegister' href='./../Overviews/Methods.html#readRegister'>readRegister</a> (<span class='argstr'>path</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*register' href='./../Overviews/Methods.html#register'>register</a> (<span class='argstr'>name</span>, <span class='argstr'>ip</span>, <span class='argstr'>port</span>)</h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*shush' href='./../Overviews/Methods.html#shush'>shush</a> </h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*update' href='./../Overviews/Methods.html#update'>update</a> (<span class='argstr'>path</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*url' href='./../Overviews/Methods.html#url'>url</a> (<span class='argstr'>url</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*writeRegister' href='./../Overviews/Methods.html#writeRegister'>writeRegister</a> </h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h2><a class='anchor' name='Help%20template'>Help template</a></h2>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-init' href='./../Overviews/Methods.html#init'>init</a> (<span class='argstr'>arg1</span>, <span class='argstr'>arg2</span>, <span class='argstr'>arg3</span>)</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-init2' href='./../Overviews/Methods.html#init2'>init2</a> (<span class='argstr'>arg1</span>, <span class='argstr'>arg2</span>, <span class='argstr'>arg3</span>)</h3>
+<h2><a class='anchor' name='Help%20template'>Help template</a></h2>
 
 <p>Copy and paste the text below and save to HelpSource/Classes/Computer.schelp<pre class='code prettyprint lang-sc'>TITLE:: Computer
 summary:: (put short description here)
@@ -56,6 +75,57 @@ DESCRIPTION::
 
 
 CLASSMETHODS::
+
+METHOD:: clone
+(describe method here)
+
+ARGUMENT:: path
+(describe argument here)
+
+ARGUMENT:: url
+(describe argument here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: initClass
+(describe method here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: play
+(describe method here)
+
+ARGUMENT:: arg1
+(describe argument here)
+
+ARGUMENT:: arg2
+(describe argument here)
+
+ARGUMENT:: arg3
+(describe argument here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: update
+(describe method here)
+
+ARGUMENT:: path
+(describe argument here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: fileRegister
+(describe method here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: readRegister
+(describe method here)
+
+ARGUMENT:: path
+(describe argument here)
+
+returns:: (describe returnvalue here)
 
 METHOD:: register
 (describe method here)
@@ -71,11 +141,6 @@ ARGUMENT:: port
 
 returns:: (describe returnvalue here)
 
-METHOD:: shush
-(describe method here)
-
-returns:: (describe returnvalue here)
-
 METHOD:: url
 (describe method here)
 
@@ -84,13 +149,55 @@ ARGUMENT:: url
 
 returns:: (describe returnvalue here)
 
-METHOD:: play
+METHOD:: new
+(describe method here)
+
+ARGUMENT:: arg1
+(describe argument here)
+
+ARGUMENT:: arg2
+(describe argument here)
+
+ARGUMENT:: arg3
+(describe argument here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: writeRegister
 (describe method here)
 
 returns:: (describe returnvalue here)
 
 
 INSTANCEMETHODS::
+
+METHOD:: init2
+(describe method here)
+
+ARGUMENT:: arg1
+(describe argument here)
+
+ARGUMENT:: arg2
+(describe argument here)
+
+ARGUMENT:: arg3
+(describe argument here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: init
+(describe method here)
+
+ARGUMENT:: arg1
+(describe argument here)
+
+ARGUMENT:: arg2
+(describe argument here)
+
+ARGUMENT:: arg3
+(describe argument here)
+
+returns:: (describe returnvalue here)
 
 
 EXAMPLES::
