new basics guide

--- a/Computer.html
+++ b/Computer.html
@@ -46,7 +46,7 @@
 <li><a href="./Workshops/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Workshops/Playing with UGens.html">Playing with UGens</a></ul>
 
 <p><dt>Study Guides<dd><ul>
-<li><a href="./Study Guides/Digital Audio.html">Digital Audio</a></ul>
+<li><a href="./Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Study Guides/Digital Audio.html">Digital Audio</a></ul>
 
 <p><dt>Code Examples<dd><ul>
 <li><a href="./Code Examples/Code for Fun.html">Code for Fun</a></ul>
