added granular example

--- a/Classes/ArrayedCollection.html
+++ b/Classes/ArrayedCollection.html
@@ -19,7 +19,7 @@
 <div id='summary'>Abstract superclass of Collections of fixed maximum size</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Collections/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Collections/ArrayedCollection.sc'>ArrayedCollection.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/SequenceableCollection.html">SequenceableCollection</a> : <a href="../Classes/Collection.html">Collection</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/ArrayedCollection.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/ArrayedCollection.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/SequenceableCollection.html">SequenceableCollection</a> : <a href="../Classes/Collection.html">Collection</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='subclasses'>Subclasses: <a href="../Classes/Array.html">Array</a>, <a href="../Classes/RawArray.html">RawArray</a></div>
 </div>
 <div id='toc'>
@@ -30,7 +30,7 @@
 <li class='toc3'><a href='#*series'>series</a> </li>
 <li class='toc3'><a href='#*geom'>geom</a> </li>
 <li class='toc3'><a href='#*iota'>iota</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-size'>size</a> </li>
 <li class='toc3'><a href='#-maxSize'>maxSize</a> </li>
@@ -86,8 +86,8 @@
 <li class='toc3'><a href='#-msgSize'>msgSize</a> </li>
 <li class='toc3'><a href='#-bundleSize'>bundleSize</a> </li>
 <li class='toc3'><a href='#-asciiPlot'>asciiPlot</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-addIfNotNil'>addIfNotNil</a> </li>
 <li class='toc3'><a href='#-asArray'>asArray</a> </li>
 <li class='toc3'><a href='#-atDec'>atDec</a> </li>
@@ -100,8 +100,6 @@
 <li class='toc3'><a href='#-getSlots'>getSlots</a> </li>
 <li class='toc3'><a href='#-indexedSize'>indexedSize</a> </li>
 <li class='toc3'><a href='#-isArray'>isArray</a> </li>
-<li class='toc3'><a href='#-lowpass'>lowpass</a> </li>
-<li class='toc3'><a href='#-lowpassCS'>lowpassCS</a> </li>
 <li class='toc3'><a href='#-overWrite'>overWrite</a> </li>
 <li class='toc3'><a href='#-prBundleSize'>prBundleSize</a> </li>
 <li class='toc3'><a href='#-reshapeLike'>reshapeLike</a> </li>
@@ -136,7 +134,7 @@
 <div class='method'>
 <p>Fills an ArrayedCollection with a counter. See <a href="./../Guides/J-concepts-in-SC.html">J concepts in SC</a> for more examples.<pre class='code prettyprint lang-sc'>Array.iota(2, 3);
 Array.iota(2, 3, 4);</pre>
-</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-size' href='./../Overviews/Methods.html#size'>size</a> </h3>
 <div class='method'>
@@ -166,7 +164,7 @@ y.foldAt(3).postln; // this returns the value at index 1
 y.foldAt(4).postln; // this returns the value at index 0
 y.foldAt(5).postln; // this returns the value at index 1</pre>
 </div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-plot' href='./../Overviews/Methods.html#plot'>plot</a> (<span class='argstr'>name</span>, <span class='argstr'>bounds</span>, <span class='argstr'>discrete: false</span>, <span class='argstr'>numChannels</span>, <span class='argstr'>minval</span>, <span class='argstr'>maxval</span>, <span class='argstr'>separately: true</span>)</h3>
-<div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/PlusGUI/Math/PlotView.sc'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/GUI/PlusGUI/Math/PlotView.sc</a></div>
+<div class='extmethod'>From extension in <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/PlusGUI/Math/PlotView.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/PlusGUI/Math/PlotView.sc</a></div>
 <div class='method'>
 <p>Plot data in a GUI window. See <a href="./../Reference/plot.html">plot</a> for more details.</div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-swap' href='./../Overviews/Methods.html#swap'>swap</a> (<span class='argstr'>i</span>, <span class='argstr'>j</span>)</h3>
 <div class='method'>
@@ -456,8 +454,8 @@ a.bundleSize;</pre>
 <p>For an ArrayedCollection containing numbers (e.g. audio data) this renders a plot in the post window using asterisks and spaces (works best if you use a monospace font in your post window).<pre class='code prettyprint lang-sc'>a = (0, pi/10 .. 5pi).collect{|val| val.sin};
 a.asciiPlot;</pre>
 
-<p></div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p></div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addIfNotNil' href='./../Overviews/Methods.html#addIfNotNil'>addIfNotNil</a> (<span class='argstr'>item</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-asArray' href='./../Overviews/Methods.html#asArray'>asArray</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-atDec' href='./../Overviews/Methods.html#atDec'>atDec</a> (<span class='argstr'>index</span>, <span class='argstr'>dec: 1</span>)</h3>
@@ -470,10 +468,6 @@ a.asciiPlot;</pre>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-getSlots' href='./../Overviews/Methods.html#getSlots'>getSlots</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-indexedSize' href='./../Overviews/Methods.html#indexedSize'>indexedSize</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-isArray' href='./../Overviews/Methods.html#isArray'>isArray</a> </h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-lowpass' href='./../Overviews/Methods.html#lowpass'>lowpass</a> </h3>
-<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/JoshUGens/classes/AnaUtils.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/JoshUGens/classes/AnaUtils.sc</a></div>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-lowpassCS' href='./../Overviews/Methods.html#lowpassCS'>lowpassCS</a> </h3>
-<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/JoshUGens/classes/AnaUtils.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SC3plugins/JoshUGens/classes/AnaUtils.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-overWrite' href='./../Overviews/Methods.html#overWrite'>overWrite</a> (<span class='argstr'>aCollection</span>, <span class='argstr'>pos: 0</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-prBundleSize' href='./../Overviews/Methods.html#prBundleSize'>prBundleSize</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-reshapeLike' href='./../Overviews/Methods.html#reshapeLike'>reshapeLike</a> (<span class='argstr'>another</span>, <span class='argstr'>indexing: 'wrapAt'</span>)</h3>
@@ -485,4 +479,4 @@ a.asciiPlot;</pre>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-slotPut' href='./../Overviews/Methods.html#slotPut'>slotPut</a> (<span class='argstr'>index</span>, <span class='argstr'>value</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-slotSize' href='./../Overviews/Methods.html#slotSize'>slotSize</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-unbubble' href='./../Overviews/Methods.html#unbubble'>unbubble</a> (<span class='argstr'>depth: 0</span>, <span class='argstr'>levels: 1</span>)</h3>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/ArrayedCollection.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/ArrayedCollection.schelp</a><br>link::Classes/ArrayedCollection::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/ArrayedCollection.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/ArrayedCollection.schelp</a><br>link::Classes/ArrayedCollection::<br>sc version: 3.8.0</div></div></body></html>
